Add start window; refactoring main window.

--- a/source/resources.qrc
+++ b/source/resources.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>app_icon.svg</file>
+        <file>login_button_icon.svg</file>
         <file>send_button_icon.svg</file>
     </qresource>
 </RCC>
